maze.lessons.maze.island.IslandMaze.scala.error
Escaper:6: error: illegal start of statement
     ...
     ^Escaper:9: error: illegal start of statement
     ...
     ^