maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
var etat=0;
etat match  {
  case 0 => // courir au nord
     ...
     etat = 1;
  case 1 => // suivre à gauche
     ...
     etat = 0;
  case _ => println("Ce cas ne devrait pas arriver. Corrigez ce problème svp.")
}
while (!estFaceMur()){
		avance()
	}
	droite()
	keepHandOnSideWall()
}

def keepHandOnSideWall(){
	do{
		gauche()
		if(estFaceMur()){
			droite()
			if (estFaceMur()){
				droite()
				if (estFaceMur()){
					droite()
				}else{
					avance()
				}
			}else{
				avance()
			}
		}else{
			avance()
		}
	}while(!estSurBiscuit)
	prendBiscuit()
}

